offer for products and categoires implemented and their management in the admin side